streamwebs_frontend/streamwebs/static/streamwebs/style.css
@charset "UTF-8";

/* WebKit/Blink Browsers */
::selection {
    background: #b9dce8;
}

/* Gecko Browsers */
::-moz-selection {
    background: #b9dce8;
}

.title {
    width: 100%;
    font-size: 3em;
    font-weight: bolder;
    text-align: center;
    display: inline-block;
    line-height: 2.5em;
}

html,
body {
    width: 100%;
    height: 100%;

    overflow: auto;
    background-color: #fafafa;
}

.page-wrap {
    position: relative;
    width: 100%;
    min-height: 100%;
    background: url("images/bg-main.png") repeat;
}

.header {
    width: 74%;
    height: 240px;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    z-index: 1;
}

.header > .logo {
    position: absolute;
    bottom: 20px;
    left: 10%;
}

.header-img {
    position: absolute;
    left: 13%;
    top: 0;
    width: 86%;
    height: 420px;
    background: url("images/header-decor.png") no-repeat;
    background-size: 100% 420px;
    z-index: 0;
    pointer-events: none;
}

.inner-wrap {
    width: 74%;
    min-height: 700px;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 20px;
    background: #fafafa;
    z-index: 1;
}

.content {
    padding-left: 15px;
    padding-right: 15px;
    z-index: 2;
}

#map {
    width: 100%;
    height: 500px;
    margin-bottom: 10px;
}

.search-nav {
    /* Make the search bar behave as if it were not in a navbar */

    padding: 0 0 0 0 !important;
    margin-left: 0.75rem !important;
    margin-right: -0.75rem !important;
    margin-bottom: 0 !important;
}

#search {
    margin-bottom: 0;
}

/* Search placeholder color */
::-webkit-input-placeholder { /* WebKit, Blink, Edge */
    color: #fff;
}

:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
   color: #fff;
   opacity: 1;
}

::-moz-placeholder { /* Mozilla Firefox 19+ */
   color: #fff;
   opacity: 1;
}

:-ms-input-placeholder { /* Internet Explorer 10-11 */
   color: #fff;
}

.search-results {
    margin-top: 0;
    position: absolute;
    z-index: 10;
    width: 100%;
}

nav {
    margin-bottom: 25px;
    box-shadow: unset;
}

nav a.btn,
nav ul#languages {
    margin-left: 10px;
}

.nav-wrapper i {
    line-height: 36px !important;
}

#date {
    margin-bottom: 5px;
}

.rowchk {
    margin-top: 23px;
}

.rowchk > label {
    margin-right: 15px;
}

.data-table td {
    font-weight: bold;
}

.form-cell {
    min-width: 300px;
}

/* CSS for D3 graphs; ALL FREE TO BE CHANGED */
.graph {
    width: 100%;
}

div.tolerant .bar {
    fill: #8c7853;
}

div.somewhat .bar {
    fill: #869099;
}

div.sensitive .bar {
    fill: #007d4a;
}

div.graph .line {
    fill: none;
    stroke-width: 2px;
}

.tolerant.line {
    stroke: #8c7853;
}

.somewhat.line {
    stroke: #869099;
}

.sensitive.line {
    stroke: #007d4a;
}

.sensitive.total {
    stroke: #e24431;
}

.axis {
    font: 10px sans-serif;
}

.axis path,
.axis line {
    fill: none;
    stroke: black;
    shape-rendering: crispEdges;
}

table input {
    width: 90% !important;
}

table .row {
    margin: 0 !important;
}

i {
    vertical-align: middle;
}

.collapse {
    opacity: 0;
    height: 0;
    padding: 0 8px;
    overflow: hidden;
    -webkit-transition: all .3s ease .15s;
    -o-transition: all .3s ease .15s;
    transition: all .3s ease .15s;
}

.uncollapse {
    opacity: 1;
    height: auto;
    padding: 8px;
}

.collapse-btn {
    cursor: pointer;
}

.infogroup .row {
    margin-bottom: 0;
}

